--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,113 @@
-body {
+@import url('https://fonts.googleapis.com/css?family=Cantata+One');
+
+body, html {
+  width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Cantata One', serif;
+  background: #ddffea;
+}
+
+.app {
+  padding-top: 100px;
+}
+
+@media (min-width: 600px) {
+  .app {
+    padding-top: 0;
+  }
+}
+
+.logo {
+  position: absolute;
+  top: 40px;
+  left: 20px;
+  display: inline-block;
+  font-family: 'Cantata One', serif;
+  z-index: 0;
+}
+
+@media (min-width: 600px) {
+  .logo {
+    top: auto;
+    bottom: 30px;
+    left: 30px;
+  }
+}
+
+.logo__sent {
+  position: absolute;
+  top: -25px;
+  left: 13px;
+  font-size: 20px;
+}
+
+.logo__sein {
+  font-size: 50px;
+  color: #0095ef;
+  letter-spacing: -2px;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.7), 2px 0 0 rgba(0, 0, 0, 0.7), 0 1px 0 rgba(0, 0, 0, 0.7), -1px 0 0 rgba(0, 0, 0, 0.7);
+}
+
+.logo__sein::before {
+  display: block;
+  position: absolute;
+  transform: translate(10px, -20%) rotate(-10deg);
+  content: '';
+  width: 140px;
+  height: 90px;
+  border-radius: 50%;
+  background: #ffc300;
+  z-index: -1;
+}
+
+.logo__i {
+  position: relative;
+  display: inline-block;
+  line-height: 0;
+  font-size: 34px;
+}
+
+.logo__i::before {
+  position: absolute;
+  top: -28px;
+  left: 5px;
+  content: '';
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 8px solid #000;
+}
+
+.logo__i::after {
+  position: absolute;
+  top: -30px;
+  left: 2px;
+  content: '';
+  width: 0;
+  height: 0;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-top: 11px solid #fe2900;
+}
+
+.quote {
+  max-width: 480px;
+  margin: 0 auto;
+  padding: 50px;
+  font-size: 20px;
+  text-align: center;
+}
+
+.quote__mark {
+  font-size: 20px;
+  color: #0095ef;
+}
+
+.footer {
+  padding: 10px 0;
+  font-size: 14px;
+  text-align: center;
 }
